backend: maven -> gradle

--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,13 @@ $RECYCLE.BIN/
 
 #MegaBasterd DB
 *.db
+
+# Gradle output
+.gradle/
+build/*
+run/
+# Gradle wrapper
+gradle-wrapper.jar
+
+#Kotlin
+.kotlin
